[WCMSFEQ-597] Fixing alignment of text in select box

--- a/CancerGov/_src/StyleSheets/_jqueryui_overrides.scss
+++ b/CancerGov/_src/StyleSheets/_jqueryui_overrides.scss
@@ -136,7 +136,7 @@ $ui-selectmenu-maxitems: 7;
 		padding: .5em;
 		line-height: 1;
 		margin-right: 32px;
-		text-align: center;
+		//text-align: center;
 	}
 	&:hover span.ui-icon,
 	&:focus span.ui-icon {
